fixed : error message enchnat and some bug fixed